Fixed mobile scrollX overflow
Fixed mobile layout
add some styles
add tags in articles preview
add theme color to settings

--- a/src/el.scss
+++ b/src/el.scss
@@ -1,34 +1,16 @@
 .article{
-  h1 {
-    font-size: 2.0rem;
-  }
-  h2 {
-    font-size: 1.7rem;
-  }
-  h3 {
-    font-size: 1.4rem;
-  }
-  h4 {
-    font-size: 1.2rem;
-  }
-  h5 {
-    font-size: 1rem;
-  }
-  h6 {
-    font-size: 0.8rem;
-  }
   ul {
     padding-inline-start: 2em;
   }
   blockquote {
     background-color: #eeeeee;
-    color: black;
-    border-left: 2px solid black;
+    color: inherit;
+    border-left: 3px solid gray;
     font-style: italic;
     margin: 0;
     border-radius: 2px;
     p {
-      padding: 5px 5px 5px 1.5rem;
+      padding: 1em 1em 1em 1.5em;
     }
   }
   a {
@@ -37,4 +19,31 @@
   p{
     padding-left: 10px;
   }
+  img {
+    max-width: 100%;
+  }
+}
+h1 {
+  font-size: 2.0rem;
+  color: black;
+}
+h2 {
+  font-size: 1.7rem;
+  color: black;
+}
+h3 {
+  font-size: 1.4rem;
+  color: black;
+}
+h4 {
+  font-size: 1.2rem;
+  color: black;
+}
+h5 {
+  font-size: 1rem;
+  color: black;
+}
+h6 {
+  font-size: 0.8rem;
+  color: black;
 }
